log_output/manifests/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-log-prefix
spec:
  stripPrefix:
    prefixes:
      - /log
      - /pingpong
