log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: randomstrgenerator-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: randomstrgenerator
  template:
    metadata:
      labels:
        app: randomstrgenerator
    spec:
      volumes:
        - name: shared-logs   # ← arbitrary, local to the pod
          persistentVolumeClaim: 
            claimName: logpong-claim  # ← reference to the PVC
        - name: config-volume
          configMap:
            name: log-config
            items:
              - key: "information"
                path: "information.txt"
      containers:
        - name: randomstrgenerator
          image: opeyemiorugun/rand_str_generator:v2.1.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: randomstrweb
          image: opeyemiorugun/randomstrweb:v4.2.0
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
